# rirmega-eval

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENVIRONMENT.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  constraints.txt  pyproject.toml  tmp_gt_preds.parquet  tmp_gt_preds_dev.parquet  tmp_gt_preds_dev_ririd.parquet
.github/workflows/: ci.yml
baselines/: README.md  baseline0_heuristics.py
baselines/baseline1_ml/: expected_baseline_numbers.json  features.py  model.py  train.py
baselines/configs/: baseline1_default.json
baselines/reference/: v1_param_estimation_dev_gt_summary.json
docs/: DATASET_SPEC.md  HF_PUBLISHING.md  METRIC_SPECS.md  PREDICTIONS_FORMAT.md  TASK_SPECS.md
eval_out_dev_gt/: metrics.json  summary.json
impact_ledger/: README.md  ledger.json
paper_assets/: benchmark_overview_diagram_PLACEHOLDER.txt  leaderboard_submission_TEMPLATE.md  reproducibility_checklist_TEMPLATE.md
scripts/: build_rirmega_eval.py  evaluate.py  impact_log.py  make_checksums.py  publish_to_hf.py  validate_dataset.py
space/: README.md  app.py  requirements.txt
src/rirmega_eval/: config.py
src/rirmega_eval/eval/: harness.py  scoring.py  slicing.py
src/rirmega_eval/impact/: ledger.py  privacy.py
src/rirmega_eval/io/: hf.py  parquet.py  schema.py  splits.py
src/rirmega_eval/metrics/: canonical.py  center_time.py  clarity.py  drr.py  edc.py  rt60.py
src/rirmega_eval/utils/: checksums.py  hashing.py  json.py  (+1 more)
tests/: conftest.py  test_clarity_ts.py  test_drr.py  test_edc_rt60.py  test_predictions_format.py  test_splits_grouped.py
