[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "rirmega-eval"
version = "0.1.0"
description = "RIRMega-Eval: Official benchmark infrastructure for RIR and acoustic ML evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Mandip Goswami"}]
dependencies = [
  "numpy==1.26.4",
  "scipy==1.12.0",
  "pandas==2.2.2",
  "pyarrow==16.1.0",
  "soundfile==0.12.1",
  "tqdm==4.66.4",
  "pydantic==2.7.1",
  "datasets==2.19.1",
  "huggingface_hub==0.23.2",
  "xxhash==3.4.1",
  "pyyaml==6.0.1",
  "orjson==3.10.3",
  "scikit-learn==1.4.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.1",
  "pytest-cov==5.0.0",
  "ruff==0.4.7",
  "mypy==1.10.0",
  "types-PyYAML==6.0.12.20240311",
]

[project.scripts]
rirmega-eval-build = "rirmega_eval.cli:build_main"
rirmega-eval-evaluate = "rirmega_eval.cli:evaluate_main"

[tool.hatch.build.targets.wheel]
packages = ["src/rirmega_eval"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = "src"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

